--- a/index.html
+++ b/index.html
@@ -291,8 +291,8 @@
                 <div class="p-4 bg-slate-700/30 rounded-xl space-y-3 border border-slate-700">
                     <div class="grid grid-cols-2 gap-3">
                         <select id="inpReadStatus" class="input-field custom-select bg-slate-800" onchange="toggleDateVisibility()">
-                            <option value="unread">Status: Unread</option>
-                            <option value="read">Status: Read</option>
+                            <option value="unread">Unread</option>
+                            <option value="read">Read</option>
                         </select>
                          <select id="inpStatus" class="input-field custom-select bg-slate-800">
                             <option value="wip">WIP</option>
